Olympus/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standalone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Type_Read_Oly__c</fullName>
        <formula>TEXT(HSFE_Charge_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Active_PartNumber__c</fullName>
        <description>This field has been created for data loading purposes</description>
        <formula>&quot;TRUE&quot;+ HSFE_Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active_PartNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Alt_UOM__c</fullName>
        <label>Alt UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pieces</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Charge_Type__c</fullName>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charge Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Type 30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Country_of_Origin__c</fullName>
        <description>To be updated via Integration</description>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Denominator__c</fullName>
        <label>Denominator</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Description_Filter__c</fullName>
        <description>This field is only used as a filter on the catalog page</description>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>ACMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConMed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConMed Linvatec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covidien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethicon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujinon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karl Storz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KayPentax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meditron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medivator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medivators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Wolf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smith &amp; Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somnus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stryker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValleyLab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_External_Material_Group__c</fullName>
        <label>External Material Group</label>
        <picklist>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&amp;R - MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surg Endo - AVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surg Endo - ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surg Endo - SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surg Endo - Uro/Gyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Trade-In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Is_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Is_Kit_In_A_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will ignore parent kit inheritance</description>
        <inlineHelpText>This flag will ignore parent kit inheritance</inlineHelpText>
        <label>Is Kit In A Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSFE_Is_Serialized__c</fullName>
        <label>Is Serialized</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Item_Category_Group__c</fullName>
        <label>Item Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Install Item Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-stock material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service w/ Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structure/Mat. above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structure/mat. below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Material_Group__c</fullName>
        <label>Material Group</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/RepairCharge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Material_Type__c</fullName>
        <label>Material Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finished products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-stock materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonvaluated materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP: Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare Parts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_OMD__c</fullName>
        <description>Olympus Manufacturing Division</description>
        <label>OMD</label>
        <picklist>
            <picklistValues>
                <fullName>ACMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConMed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConMed Linvatec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covidien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethicon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujinon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;J ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karl Storz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KayPentax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meditron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medivator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medivators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Wolf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smith &amp; Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somnus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stryker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValleyLab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Part_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Part Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSFE_Product_Conditions_Multi__c</fullName>
        <inlineHelpText>Check Product Charge types available for a product and apply. If not present contact administrator.</inlineHelpText>
        <label>Product Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In - Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In - Olympus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Hierarchy_Description__c</fullName>
        <label>Product Hierarchy Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Hierarchy_Level__c</fullName>
        <label>Product Hierarchy Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Product_Number__c</fullName>
        <label>Product Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Profit_Center_Description__c</fullName>
        <label>Profit Center Description</label>
        <picklist>
            <picklistValues>
                <fullName>ACCESS SHEATHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTHROSCOPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI LABOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI MONITORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF FIBERSCOPES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF VIDEOSCOPES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPOLAR DISPOSABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPOLAR LAP LOOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLADES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMERA HEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARDIO VASCULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARTS ROLLSTANDS &amp; M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATHETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS TRAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CELON CAPITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CELON DISPOSABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLONOSCOPES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLPOSCOPES ACCESSOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLPOSCOPES CAPITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMON ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPUTER HARDWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYSTO-RESECTION ACCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYSTO-RESECTION GENE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Stocking_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will keep the info about product is stocking/Phantom kit or not</description>
        <label>Is Stocking/Phantom Kit</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Product_Charge_Types</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>HSFE_Charge_Type__c</columns>
        <columns>HSFE_Product_Conditions_Multi__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>Product Charge Types</label>
    </listViews>
</CustomObject>